# Multimodal-NLOS-Crossgate

./: .gitignore  README.md  pyproject.toml
configs/: project_config.template.yaml
src/multimodal_nlos/: __init__.py  config.py
src/multimodal_nlos/models/: __init__.py  classifier.py  crossgate.py  encoders.py  sparse_regularizer.py
src/multimodal_nlos/training/: __init__.py  losses.py
