[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodal-nlos-core"
version = "0.1.0"
description = "Core CrossGate framework for multimodal LOS/NLOS classification."
requires-python = ">=3.10"
dependencies = ["torch", "numpy"]

[tool.setuptools.packages.find]
where = ["src"]

